<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loadingSplashLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="35dp"
    android:visibility="visible">

    <requestFocus />
        
    <EditText
        android:id="@+id/url"
        style="@style/delta_loginInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_enteliweb_hint"
        android:text="" />

    <EditText
        android:id="@+id/user_name"
        style="@style/delta_loginInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_user_hint"
        android:text="" />

    <EditText
        android:id="@+id/password"
        style="@style/delta_loginInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_password_hint"
        android:inputType="textWebPassword"
        android:password="true"
        android:text="" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/login"
        android:visibility="gone" />
</LinearLayout>