<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightestGrey"
    android:clickable="true"
    android:padding="15dp"
    android:stretchColumns="1" >

    <!-- 2 columns -->

    <TableRow
        android:id="@+id/tableRowAlarmGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_alarm_group"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/eventListGroupFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@color/transparent"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_filter_on_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/filterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:hint="@string/filter_filter_on_text_hint"
            android:background="@drawable/selector_delta_edit_text_background" />
    </TableRow>

</TableLayout>